# hoon_firewall_modules

./: .gitignore  CLI_ISSUES_REPORT.md  CLI_USAGE.md  LICENSE  MANIFEST.in  README.md  __init__.py  build_and_install.sh  fpat_cli.py  fpat_conversion_strategy.md  fpat_fastapi_conversion_review.md  fpat_module_quality_review.md  pyproject.toml  requirements.txt  test_library.py  test_policy_filter.py  test_shadow_analyzer.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyzer.py  deletion.py  firewall.py  policy_compare.py
cli/utils/: __init__.py  completion.py  config.py  interactive.py  logger.py
docs/: PROCESS_FLOW.md
examples/: firewall_module_enhanced_examples.py
fastapi-fpat/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh
fastapi-fpat/app/: __init__.py  main.py
fastapi-fpat/app/core/: __init__.py  config.py
fastapi-fpat/app/models/: __init__.py  schemas.py
fastapi-fpat/app/services/: fpat_service.py  job_service.py
fpat/firewall_analyzer/core/: redundancy_analyzer.py  shadow_analyzer.py
fpat/firewall_module/: README.md
modules/: __init__.py
modules/analysis_module/: __init__.py
modules/analysis_module/core/: __init__.py  change_analyzer.py  policy_analyzer.py  policy_filter.py
modules/analysis_module/utils/: __init__.py  excel_handler.py
modules/delete_scenario/: __init__.py
modules/delete_scenario/processors/: __init__.py
modules/firewall_analyzer/core/: policy_resolver.py
modules/firewall_module/: __init__.py  collector_factory.py  exporter.py  firewall_interface.py
modules/firewall_module/mf2/: mf2_collector.py
modules/firewall_module/mock/: mock_collector.py
modules/firewall_module/ngf/: ngf_collector.py
modules/firewall_module/paloalto/: paloalto_collector.py  paloalto_module.py
modules/policy_deletion_processor/: __init__.py
modules/policy_deletion_processor/processors/: request_info_adder.py
modules/proxy_module/: condition_parser.py  policy_parser.py  skyhigh_client.py
simple_firewall_app/: app.py  requirements.txt
simple_firewall_app/templates/: index.html
(+7 files in other folders)
