[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoon-firewall-modules"
version = "1.2.0"
authors = [
    {name = "Hoon", email = "your-email@example.com"},
]
description = "방화벽 정책 관리를 위한 통합 라이브러리"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Systems Administration",
]
keywords = ["firewall", "security", "policy", "paloalto", "ngf", "network"]

dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "requests>=2.25.0",
    "lxml>=4.6.0",
    "python-dateutil>=2.8.0",
    "urllib3==1.26.12",
    "paramiko>=3.0.0",
    "scp>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hoon-firewall-modules"
"Bug Reports" = "https://github.com/yourusername/hoon-firewall-modules/issues"
"Source" = "https://github.com/yourusername/hoon-firewall-modules"

[tool.setuptools]
py-modules = ["__init__"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]

[tool.setuptools.package-dir]
"hoon_firewall_modules" = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 